src/ducks/Watchlists/Widgets/Table/AssetsTable.module.scss
@import '~@santiment-network/ui/mixins';

.container {
  margin: 34px 0 40px 0;
}

.top {
  padding: 8px 36px 10px 32px;
  display: flex;
  justify-content: space-between;
  width: 100%;
  transition: width 0.2s ease-in-out;
  position: sticky;
  top: 64px;
  background-color: var(--white);
  z-index: 1;
}

.tooltip {
  max-width: 160px;
  padding: 6px 12px;

  @include text('caption');
}

.actions {
  display: flex;
  align-items: center;
  fill: var(--waterloo);
}

.leftActions {
  display: flex;
  align-items: center;
  fill: var(--waterloo);
  margin-right: auto;
}

.compareIcon {
  fill: var(--waterloo);
}

.compareAction {
  margin-left: 24px;
}

.action {
  fill: var(--waterloo);
  box-sizing: content-box;
  padding: 0 8px 0 22px;
  cursor: pointer;
  display: flex;
  position: relative;
  background-color: transparent !important;

  &__withLine::before {
    display: block;
    content: '';
    position: absolute;
    right: -8px;
    top: -4px;
    height: 24px;
    width: 1px;
    background: var(--porcelain);
  }

  &__wrapper {
    display: flex;
  }

  &__tooltip {
    white-space: nowrap;
  }

  &:hover {
    fill: var(--jungle-green);
  }
}

.loading {
  background-color: var(--athens);
}

.noData {
  position: absolute;
  top: 25px;
}

.loader {
  position: absolute;
  width: 100%;
  top: 43px;
}

.assetsTable {
  width: 100%;
  transition: width 0.2s ease-in-out;
  border: none;
}

.assetsTable:global(.ReactTable) {
  margin-bottom: 20px;
  color: var(--rhino);

  :global {
    .overview-name {
      text-align: left;
      margin-right: auto;

      & div {
        margin-left: auto;
      }
    }

    .overview-ethspent,
    .overview-rank {
      margin: 0 auto;
      text-align: center;
    }

    .overview-price,
    .overview-price-percent,
    .overview-volume,
    .overview-volume-percent,
    .overview-marketcap,
    .overview-activeaddresses,
    .overview-devactivity {
      margin-right: auto;
      text-align: right;

      & span {
        margin-left: 0;
      }
    }

    .rt-th {
      box-sizing: content-box;
      position: relative;
      width: 100%;
      overflow: visible;
      border: none;

      @include text('body-3', 'm');

      line-height: 18px;

      & > div {
        width: 100%;
      }

      .heading {
        position: relative;
        padding: 0 10px;
        width: fit-content;
      }

      &.-sort-desc,
      &.-sort-asc {
        color: var(--rhino);
        box-shadow: none !important;

        & .heading {
          &::before,
          &::after {
            content: '';
            position: absolute;
            right: 0;
            border: 4px solid transparent;
            border-radius: 3px;
          }

          &::before {
            border-top: 4px solid var(--mystic);
            bottom: 0;
          }

          &::after {
            border-bottom: 4px solid var(--mystic);
            top: 0;
          }
        }
      }

      &.-sort-asc .heading::after {
        border-bottom-color: var(--waterloo);
      }

      &.-sort-desc .heading::before {
        border-top-color: var(--waterloo);
      }
    }

    .rt-tbody {
      overflow: visible;
    }

    .rt-tbody .rt-tr-group,
    .rt-thead.-header {
      border-radius: 4px;
      border-bottom: none;
      overflow: visible;
    }

    .rt-thead.-header {
      position: sticky;
      top: 114px;
    }

    .rt-td {
      min-height: 60px;
      padding: 10px !important;
      display: inline-flex;
      align-items: center;
      cursor: default;
      overflow: visible;

      & > div {
        @include text('body-3');
      }

      &:nth-child(2) {
        padding-left: 0;
      }

      &:hover {
        cursor: pointer;
      }
    }

    // [GarageInc:01.09.2020] overflow: visible; for showing tooltips on rows
    .rt-table {
      flex: 0 0;
      padding-top: 8px;
      overflow: visible;

      &:hover {
        overflow: visible;
      }
    }

    .-pagination {
      border-top: none;
    }
  }
}

.skeleton {
  height: 56px;
}

.skeleton + .skeleton {
  margin-top: 4px;
}

.saveAs {
  display: flex;
  align-items: center;
  margin: 0 auto 0 24px;
}

.saveAs__icon {
  margin-right: 8px;
}

.saveAs__proLabel {
  margin-left: 8px;
}

.saveAs__btn {
  fill: var(--casper);

  &:hover {
    fill: var(--jungle-green-light-3);
    color: var(--jungle-green);
  }
}

